non-msrv-tests/tests/ui/item_option.stderr
error: `Debug` doesn't support custom options
 --> tests/ui/item_option.rs:1:30
  |
1 | #[derive_where::derive_where(Debug(option); T)]
  |                              ^^^^^^^^^^^^^
